feat: 新增组态页面 && 组态 vuex

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "url": "git+https://github.com/dgiot/dgiot_dashboard.git"
   },
   "dependencies": {
+    "@quasar/extras": "^1.3.3",
+    "quasar": "^1.5.11",
     "@logicflow/core": "^0.2.7",
     "@logicflow/extension": "^0.2.7",
     "core-js": "^3.9.1",
