--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "url": "git+https://github.com/dgiot/dgiot_dashboard.git"
   },
   "dependencies": {
-    "@quasar/extras": "^1.3.3",
-    "quasar": "^1.5.11",
     "@logicflow/core": "^0.2.7",
     "@logicflow/extension": "^0.2.7",
+    "@quasar/extras": "^1.3.3",
     "core-js": "^3.9.1",
     "element-ui": "^2.15.1",
+    "konva": "^7.2.5",
+    "quasar": "^1.5.11",
     "resize-detector": "^0.3.0",
     "vab-contextmenu": "^0.0.1",
     "vab-count": "^0.0.1",
@@ -38,6 +39,7 @@
     "vab-quill": "^0.0.1",
     "vue-count-to": "^1.0.13",
     "vue-json-editor": "^1.4.3",
+    "vue-konva": "^2.1.7",
     "zx-markdown-editor": "^0.0.2"
   },
   "devDependencies": {
