--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "vue-count-to": "^1.0.13",
     "vue-json-editor": "^1.4.3",
     "vue-konva": "^2.1.7",
-    "zx-markdown-editor": "^0.0.2"
+    "zx-markdown-editor": "^0.0.2",
+    "topology-vue": "^0.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.11",
