--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "vue-cli-service lint",
     "lint:style": "stylelint **/*.{vue,scss} --fix",
     "inspect": "vue-cli-service inspect",
+    "ncu": "yarn global add npm-check-updates",
+    "update": "ncu -u --reject eslint,sass-loader,compression-webpack-plugin,filemanager-webpack-plugin --registry https://registry.npm.taobao.org&&npm install --registry=https://registry.npm.taobao.org&&cnpm i image-webpack-loader -D",
     "clear": "npm cache clean -f&&rimraf node_modules&&npm install --registry=https://registry.npm.taobao.org&&cnpm i image-webpack-loader -D",
     "image-webpack-loader": "cnpm i image-webpack-loader -D"
   },
@@ -22,33 +24,33 @@
     "url": "git+https://github.com/dgiot/dgiot_dashboard.git"
   },
   "dependencies": {
-    "@logicflow/core": "^0.2.7",
-    "@logicflow/extension": "^0.2.7",
-    "@quasar/extras": "^1.3.3",
+    "@logicflow/core": "^0.2.9",
+    "@logicflow/extension": "^0.2.9",
+    "@quasar/extras": "^1.10.0",
     "core-js": "^3.9.1",
     "element-ui": "^2.15.1",
     "konva": "^7.2.5",
-    "quasar": "^1.5.11",
+    "quasar": "^1.15.9",
     "resize-detector": "^0.3.0",
     "vab-contextmenu": "^0.0.1",
     "vab-count": "^0.0.1",
     "vab-cropper": "^0.0.1",
     "vab-icons": "0.0.19",
     "vab-magnifier": "0.0.1",
-    "vab-player": "^0.0.3",
-    "vab-quill": "^0.0.1",
+    "vab-player": "^0.0.4",
+    "vab-quill": "^3.0.1",
     "vue-count-to": "^1.0.13",
     "vue-json-editor": "^1.4.3",
     "vue-konva": "^2.1.7",
     "zx-markdown-editor": "^0.0.2",
-    "topology-vue": "^0.5.2"
+    "topology-vue": "^0.5.7"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.11",
-    "@vue/cli-plugin-eslint": "^4.5.11",
-    "@vue/cli-plugin-router": "^4.5.11",
-    "@vue/cli-plugin-vuex": "^4.5.11",
-    "@vue/cli-service": "^4.5.11",
+    "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/cli-plugin-eslint": "^4.5.12",
+    "@vue/cli-plugin-router": "^4.5.12",
+    "@vue/cli-plugin-vuex": "^4.5.12",
+    "@vue/cli-service": "^4.5.12",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "body-parser": "^1.19.0",
@@ -59,9 +61,9 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.21.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.7.0",
-    "filemanager-webpack-plugin": "^3.1.0",
-    "husky": "^5.1.3",
+    "eslint-plugin-vue": "^7.8.0",
+    "filemanager-webpack-plugin": "^3.1.1",
+    "husky": "^6.0.0",
     "image-webpack-loader": "^7.0.1",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
@@ -69,10 +71,10 @@
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "script-loader": "^0.7.2",
-    "stylelint": "^13.11.0",
+    "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recess-order": "^2.3.0",
-    "svg-sprite-loader": "^5.2.1",
+    "svg-sprite-loader": "^6.0.2",
     "vue-eslint-parser": "^7.6.0",
     "vue-template-compiler": "^2.6.12",
     "webpackbar": "^5.0.0-3"
