--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "vab-icons": "0.0.19",
     "vue-count-to": "^1.0.13",
     "vue-json-editor": "^1.4.3",
-    "vue-konva": "^2.1.7",
-    "zx-markdown-editor": "^0.0.2"
+    "vue-konva": "^2.1.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
