--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "inspect": "vue-cli-service inspect",
     "ncu": "yarn global add npm-check-updates",
     "update": "ncu -u --reject eslint,sass-loader,compression-webpack-plugin,filemanager-webpack-plugin --registry https://registry.npm.taobao.org&&npm install --registry=https://registry.npm.taobao.org&&cnpm i image-webpack-loader -D",
-    "clear": "npm cache clean -f&&rimraf node_modules&&npm install --registry=https://registry.npm.taobao.org&&cnpm i image-webpack-loader -D",
-    "image-webpack-loader": "cnpm i image-webpack-loader -D"
+    "clear": "npm cache clean -f&&rimraf node_modules&&npm install --registry=https://registry.npm.taobao.org&&cnpm i image-webpack-loader -D"
   },
   "repository": {
     "type": "git",
@@ -30,9 +29,9 @@
     "core-js": "^3.9.1",
     "element-ui": "^2.15.1",
     "konva": "^7.2.5",
+    "vab-icons": "git+https://hub.fastgit.org/zxcasvw/vab-icons.git",
     "resize-detector": "^0.3.0",
     "topology-vue": "^0.5.7",
-    "vab-icons": "0.0.19",
     "vue-count-to": "^1.0.13",
     "vue-json-editor": "^1.4.3",
     "vue-konva": "^2.1.7"
@@ -59,7 +58,7 @@
     "eslint-plugin-vue": "^7.8.0",
     "filemanager-webpack-plugin": "^3.1.1",
     "husky": "^6.0.0",
-    "image-webpack-loader": "^7.0.1",
+    "image-webpack-loader": "git+https://hub.fastgit.org/tcoopman/image-webpack-loader.git",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "raw-loader": "^4.0.2",
