--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "lint:style": "stylelint **/*.{vue,scss} --fix",
     "inspect": "vue-cli-service inspect",
     "ncu": "yarn global add npm-check-updates",
-    "update": "ncu -u --reject eslint,sass-loader,compression-webpack-plugin,filemanager-webpack-plugin --registry https://registry.npm.taobao.org&&npm install --registry=https://registry.npm.taobao.org&&cnpm i image-webpack-loader -D",
-    "clear": "npm cache clean -f&&rimraf node_modules&&npm install --registry=https://registry.npm.taobao.org&&cnpm i image-webpack-loader -D"
+    "update": "ncu -u --reject eslint,sass-loader,compression-webpack-plugin,filemanager-webpack-plugin --registry https://registry.npm.taobao.org&&npm install --registry=https://registry.npm.taobao.org",
+    "clear": "npm cache clean -f&&rimraf node_modules&&npm install --registry=https://registry.npm.taobao.org"
   },
   "repository": {
     "type": "git",
